# helioslogs

./: .gitignore  Cargo.toml  LICENSE.md  README.md  crates-io.md  deny.toml
.github/workflows/: ci.yml
frontend/: .editorconfig  eslint.config.js  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts  vitest.setup.ts
frontend/__tests/api/: client.test.ts  events.test.ts
frontend/__tests/components/: ClickableText.test.tsx  Highlight.test.tsx  Markdown.test.tsx  Pagination.test.tsx  ResultsTable.test.tsx  badges.test.tsx
frontend/__tests/lib/: autoRefresh.test.ts  format.test.ts  formatDuration.test.ts  query.test.ts  severity.test.ts  sort.test.ts  suggestContext.test.ts  suggestData.test.ts  timezone.test.ts  viewContext.test.ts
frontend/__tests/pages/: AgentPanel.test.tsx  DashboardsPage.test.tsx  EnvironmentsPanel.test.tsx  GeneralPanel.test.tsx  LoginPage.test.tsx  PushTokensPanel.test.tsx
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: agent.ts  client.ts  events.ts  types.ts
frontend/src/components/: AdminAllToggle.tsx  AgentDrawer.tsx  AgentToolArtifact.tsx  AlertDetail.tsx  AlertDetailModal.tsx  AlertToasts.tsx  AllowlistEditor.tsx  ClickableText.tsx  DemoBlockedToast.tsx  EditSearchDialog.tsx  EnvBadge.tsx  EnvPicker.tsx  FieldPanel.tsx  Highlight.tsx  Histogram.tsx  JsonTree.tsx  LiveDuration.tsx  LiveTailView.tsx  Markdown.tsx  MonitorDialog.tsx  MonitorDraftCard.tsx  MonitorsPanel.tsx  Pagination.tsx  RefreshIntervalPicker.tsx  ResultsList.tsx  ResultsTable.tsx  SaveSearchDialog.tsx  SavedSearchList.tsx  SavedSearchesMenu.tsx  SearchBar.tsx  SearchSuggest.tsx  TimeRangePicker.tsx  TimechartChart.tsx  UserDialog.tsx  VisibilityBadge.tsx
frontend/src/components/admin/: ActionButton.tsx  Card.tsx  Empty.tsx  ErrorBanner.tsx  HelpFrame.tsx  Th.tsx  Toast.tsx  index.ts
frontend/src/components/widgets/: AlertsWidget.tsx  FieldNameInput.tsx  MonitorsWidget.tsx  QueryInput.tsx  SavedSearchesWidget.tsx  SearchResultsWidget.tsx  StatWidget.tsx  TimeseriesWidget.tsx  TopNWidget.tsx  WidgetEditor.tsx  WidgetFrame.tsx  WidgetView.tsx  util.ts
frontend/src/lib/: alertActions.ts  alertSound.ts  autoRefresh.ts  format.ts  formatDuration.ts  query.ts  severity.ts  sort.tsx  suggestContext.ts  suggestData.ts  timezone.ts  viewContext.ts
frontend/src/pages/: AccountPage.tsx  AlertsPage.tsx  DashboardViewPage.tsx  DashboardsPage.tsx  LoginPage.tsx  SavedSearchesPage.tsx  SearchPage.tsx  SetupPage.tsx
frontend/src/pages/admin/: AdminLayout.tsx  AgentPanel.tsx  ApiKeysPanel.tsx  EnvironmentsPanel.tsx  GeneralPanel.tsx  IndexesPanel.tsx  IngestionLayout.tsx  IntegrationsPanel.tsx  McpPanel.tsx  PushTokensPanel.tsx  SamlPanel.tsx  SourcesPanel.tsx  SyslogPanel.tsx  UsersLayout.tsx  UsersPanel.tsx
frontend/src/state/: theme.tsx  timezone.tsx  url.ts  useAgentChat.ts  useAgentEnabled.ts  useAgentPanel.ts  useAlertToasts.ts  useAlerts.ts  useAuth.tsx  useAutoRefresh.ts  useDashboards.ts  useLiveTail.ts  useMonitors.ts  useQuerySuggestData.ts  useSavedSearches.ts  useSearchQuery.ts  useSources.ts
packaging/: helioslogs.env.example  helioslogs.service
src/: catalog.rs  main.rs  memstats.rs  notify.rs  outbound.rs  retention.rs  runtime_config.rs  sample_data.rs  schema.rs
src/agent/: mod.rs  prompt.rs  settings.rs  store.rs  tools.rs
src/auth/: jwt.rs  mod.rs
src/control/: alerts.rs  api_keys.rs  backend.rs  crypto.rs  dashboards.rs  envs.rs  ingest_tokens.rs  mod.rs  monitors.rs  saved.rs  settings.rs  sources.rs  store.rs  users.rs
src/crypto/: aead.rs  digest.rs  mac.rs  mod.rs  password.rs  rand.rs  tls.rs
src/engine/: mod.rs
src/engine/block/: bench.rs  bench_tests.rs  cache.rs  codec.rs  compact.rs  engine.rs  engine_tests.rs  ingest.rs  mod.rs  objstore.rs  pending.rs  query.rs  reader.rs  store.rs  sync.rs  tests.rs  writer.rs
src/http/: admin.rs  agent.rs  api_keys.rs  auth.rs  dashboards.rs  embedded.rs  envs.rs  ingest.rs  ingest_tokens.rs  mcp_http.rs  mod.rs  monitors.rs  otlp_proto.rs  saml.rs  saved.rs  search.rs  shims.rs  sources.rs  syslog_admin.rs  time.rs  users.rs
src/indexer/: ingest.rs  mod.rs  tokenizer.rs
src/indexer/parse/: cef.rs  framer.rs  grok.rs  mod.rs  syslog.rs
src/llm/: anthropic.rs  bedrock.rs  mod.rs  openai.rs
src/mcp/: mod.rs  protocol.rs  tools.rs
src/monitor/: mod.rs  prompt.rs
src/saml/: config.rs  metadata.rs  mod.rs  request.rs  verify.rs
src/saml/testdata/: idp_cert.pem  saml_response_attacker.xml  saml_response_signed.xml
src/search/: discover.rs  mod.rs  pipeline.rs  scatter.rs
src/search/query/: ast.rs  highlights.rs  lex.rs  mod.rs  parse.rs  partition.rs
src/self_logs/: http_layer.rs  mcp_layer.rs  mod.rs  tracing_layer.rs  writer.rs
src/source/: mod.rs
src/syslog/: listener.rs  mod.rs  route.rs
