[package]
name = "helioslogs"
version = "1.0.2"
edition = "2021"
# Floor imposed by the aws-sdk/smithy crates (they require rustc 1.91.1). Toolchains
# older than this fail fast with a clear message instead of per-crate errors.
rust-version = "1.91.1"
description = "HeliosLogs is a fast, easy, modern log search engine with analytics & AI"
license = "AGPL-3.0-only OR LicenseRef-Appbird-Commercial"
repository = "https://github.com/helioslogs/helioslogs"
authors = ["Appbird LLC <helioslogs@appbird.com>"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
aws-lc-rs = "1"
base64 = "0.22"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls-webpki-roots-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "tls12", "logging"] }
# Native HTTPS on `--ssl-port`. `tls-rustls-no-provider` reuses the process-wide
# aws-lc-rs provider we install (crypto::tls), instead of pulling ring.
axum-server = { version = "0.7", default-features = false, features = ["tls-rustls-no-provider"] }
rustls-pemfile = "2"
tokio-stream = "0.1"
async-trait = "0.1"
futures = "0.3"
async-stream = "0.3"
bytes = "1"
uuid = { version = "1", features = ["v4"] }
hostname = "0.4"
aws-config = { version = "1", default-features = false, features = ["behavior-version-latest", "rt-tokio", "credentials-process", "sso"] }
aws-credential-types = "1"
aws-sdk-bedrockruntime = { version = "1", default-features = false, features = ["rt-tokio"] }
aws-sdk-s3 = { version = "1", default-features = false, features = ["http-1x", "rt-tokio"] }
aws-smithy-types = "1"
aws-smithy-runtime-api = "1"
aws-smithy-http-client = { version = "1", default-features = false, features = ["rustls-aws-lc"] }
rayon = "1"
roaring = "0.10"
zstd = "0.13"
regex = "1"
flate2 = "1"
glob = "0.3"
prost = "0.13"
xmlsig-lc-rs = "0.1"
roxmltree = "0.20"
# Embeds the committed frontend/dist into the binary at compile time (release
# builds). Run with --frontend-dir to serve from disk instead.
rust-embed = { version = "8", features = ["mime-guess"] }
tikv-jemallocator = { version = "0.6", features = ["unprefixed_malloc_on_supported_platforms"] }
tikv-jemalloc-ctl = { version = "0.6", features = ["stats"] }
tikv-jemalloc-sys = "0.6"

[features]
# Build all crypto (including TLS) against the AWS-LC FIPS 140-3 module. Off by default.
fips = ["aws-lc-rs/fips", "rustls/fips", "aws-smithy-http-client/rustls-aws-lc-fips", "xmlsig-lc-rs/fips"]

# Debian packaging (`cargo deb`). Ships a single self-contained binary + systemd unit.
[package.metadata.deb]
maintainer = "Appbird LLC <helioslogs@appbird.com>"
copyright = "2026, Appbird LLC"
license-file = ["LICENSE.md", "0"]
extended-description = "HeliosLogs is a fast, light weight log search tool with a custom columnar block storage engine, a built-in AI agent and MCP server"
section = "utils"
priority = "optional"
depends = "$auto"
assets = [
    ["target/release/helioslogs", "usr/bin/", "755"],
    ["packaging/helioslogs.service", "lib/systemd/system/helioslogs.service", "644"],
    ["packaging/helioslogs.env.example", "usr/share/helioslogs/helioslogs.env.example", "644"],
    ["README.md", "usr/share/doc/helioslogs/README.md", "644"],
]

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[profile.release]
lto = "thin"
opt-level = 3
